force-app/main/default/objects/Ebike_accessory__x/Ebike_accessory__x.object-meta.xml
<CustomObject>
    <description>ebike_accessory</description>
    <externalDataSource>MikesCustom_In_Memory_ODATA_Source</externalDataSource>
    <externalName>ebike_accessory</externalName>
    <label>eBike ODATA accessory</label>
    <pluralLabel>eBike ODATA accessories</pluralLabel>
</CustomObject>