force-app/main/default/objects/Ebike_accessory__x/fields/accessorydescription__c.field-meta.xml
<CustomField>
    <fullName>accessorydescription__c</fullName>
    <description>accessorydescription</description>
    <externalDeveloperName>accessorydescription</externalDeveloperName>
    <label>Accessorydescription</label>
    <length>128</length>
    <type>Text</type>
</CustomField>