force-app/main/default/objects/Ebike_accessory__x/fields/accessoryname__c.field-meta.xml
<CustomField>
    <fullName>accessoryname__c</fullName>
    <description>accessoryname</description>
    <externalDeveloperName>accessoryname</externalDeveloperName>
    <label>Accessoryname</label>
    <length>128</length>
    <type>Text</type>
</CustomField>