force-app/main/default/objects/Ebike_accessory__x/fields/accessoryreleasedate__c.field-meta.xml
<CustomField>
    <fullName>accessoryreleasedate__c</fullName>
    <description>accessoryreleasedate</description>
    <externalDeveloperName>accessoryreleasedate</externalDeveloperName>
    <label>Accessoryreleasedate</label>
    <type>Date</type>
</CustomField>