force-app/main/default/objects/Ebike_accessory__x/fields/accessorystatus__c.field-meta.xml
<CustomField>
    <fullName>accessorystatus__c</fullName>
    <description>accessorystatus</description>
    <externalDeveloperName>accessorystatus</externalDeveloperName>
    <label>Accessorystatus</label>
    <length>128</length>
    <type>Text</type>
</CustomField>