force-app/main/default/objects/Ebike_accessory__x/fields/accessoryversion__c.field-meta.xml
<CustomField>
    <fullName>accessoryversion__c</fullName>
    <description>accessoryversion</description>
    <externalDeveloperName>accessoryversion</externalDeveloperName>
    <label>Accessoryversion</label>
    <length>128</length>
    <type>Text</type>
</CustomField>