force-app/main/default/objects/Ebike_accessory__x/fields/account_fkey__c.field-meta.xml
<CustomField>
    <fullName>account_fkey__c</fullName>
    <description>account_fkey</description>
    <externalDeveloperName>account_fkey</externalDeveloperName>
    <label>Account_fkey</label>
    <length>128</length>
    <type>Text</type>
</CustomField>