force-app/main/default/objects/Ebike_accessory__x/fields/athena_fkey__c.field-meta.xml
<CustomField>
    <fullName>athena_fkey__c</fullName>
    <description>athena_fkey</description>
    <externalDeveloperName>athena_fkey</externalDeveloperName>
    <label>Athena_fkey</label>
    <length>128</length>
    <referenceTo>Ebikesales__x</referenceTo>
    <relationshipLabel>Ebike_accessory</relationshipLabel>
    <relationshipName>Ebike_accessory_del</relationshipName>
    <type>ExternalLookup</type>
</CustomField>