force-app/main/default/objects/Ebike_accessory__x/fields/dynamo_fkey__c.field-meta.xml
<CustomField>
    <fullName>dynamo_fkey__c</fullName>
    <description>dynamo_fkey</description>
    <externalDeveloperName>dynamo_fkey</externalDeveloperName>
    <label>Dynamo_fkey</label>
    <length>128</length>
    <type>Text</type>
</CustomField>