force-app/main/default/objects/Ebike_accessory__x/fields/product_fkey__c.field-meta.xml
<CustomField>
    <fullName>product_fkey__c</fullName>
    <description>product_fkey</description>
    <externalDeveloperName>product_fkey</externalDeveloperName>
    <label>Product_fkey</label>
    <length>128</length>
    <referenceTargetField>Product__c.ProductCode__c</referenceTargetField>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Ebike_accessory</relationshipLabel>
    <relationshipName>Ebike_accessory</relationshipName>
    <type>IndirectLookup</type>
</CustomField>