force-app/main/default/objects/Ebike_accessory__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>accessoryname__c</columns>
    <columns>DisplayUrl</columns>
    <columns>accessorydescription__c</columns>
    <columns>accessoryreleasedate__c</columns>
    <columns>accessorystatus__c</columns>
    <columns>accessoryversion__c</columns>
    <columns>account_fkey__c</columns>
    <columns>dynamo_fkey__c</columns>
    <columns>ExternalId</columns>
    <columns>product_fkey__c</columns>
    <columns>id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>